# Utils

./: CMakeLists.txt  Jenkinsfile  README.md  skAllocator.h  skArray.h  skArrayBase.h  skAssert.cpp  skAssert.h  skBinarySearchTree.h  skChar.cpp  skChar.h  skConfig.h.in  skDebugger.cpp  skDebugger.h  skDelegate.h  skDeque.h  skDictionary.h  skEndian.h  skFileStream.cpp  skFileStream.h  skFixedArray.h  skFixedString.h  skHash.cpp  skHash.h  skHexPrint.cpp  skHexPrint.h  skLinkedList.h  skList.h  skLogger.cpp  skLogger.h  skMap.h  skMemoryStream.cpp  skMemoryStream.h  skMemoryUtils.cpp  skMemoryUtils.h  skMinMax.h  skParser.cpp  skParser.h  skPlatformHeaders.h  skPointer.h  (+21 more)
.github/workflows/: ccpp.yml
Alloc/: malloc.c
CMake/: ConfigureUtils.cmake  skConfig.h.in
CommandLine/: skCommandLineOption.h  skCommandLineParser.cpp  skCommandLineParser.h  skCommandLineScanner.cpp  skCommandLineScanner.h  skCommandLineToken.h
Config/: skConfig.h
Tests/: Allocator.cpp  Array.cpp  BinarySearchTree.cpp  CMakeLists.txt  CommandLine.cpp  Deque.cpp  Dictionary.cpp  Map.cpp  Streams.cpp  String.cpp
